WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109929
Fix build warnings after
r139853
https://bugs.webkit.org/show_bug.cgi?id=109929
Summary
Fix build warnings after r139853
Seokju Kwon
Reported
2013-02-15 05:22:30 PST
Use UNUSED_PARAM macro to fix build warning -Wunused-parameter.
Attachments
Patch
(2.64 KB, patch)
2013-02-15 05:25 PST
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
Patch
(2.69 KB, patch)
2013-02-15 18:43 PST
,
Seokju Kwon
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Seokju Kwon
Comment 1
2013-02-15 05:25:55 PST
Created
attachment 188546
[details]
Patch
WebKit Review Bot
Comment 2
2013-02-15 11:13:31 PST
Comment on
attachment 188546
[details]
Patch Rejecting
attachment 188546
[details]
from review queue.
ap@webkit.org
does not have reviewer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have reviewer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have reviewer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your reviewer rights.
WebKit Review Bot
Comment 3
2013-02-15 11:14:09 PST
Comment on
attachment 188546
[details]
Patch Rejecting
attachment 188546
[details]
from commit-queue.
ap@webkit.org
does not have committer permissions according to
http://trac.webkit.org/browser/trunk/Tools/Scripts/webkitpy/common/config/committers.py
. - If you do not have committer rights please read
http://webkit.org/coding/contributing.html
for instructions on how to use bugzilla flags. - If you have committer rights please correct the error in Tools/Scripts/webkitpy/common/config/committers.py by adding yourself to the file (no review needed). The commit-queue restarts itself every 2 hours. After restart the commit-queue will correctly respect your committer rights.
Seokju Kwon
Comment 4
2013-02-15 18:43:06 PST
Created
attachment 188682
[details]
Patch
WebKit Review Bot
Comment 5
2013-02-16 13:02:17 PST
Comment on
attachment 188682
[details]
Patch Clearing flags on attachment: 188682 Committed
r143108
: <
http://trac.webkit.org/changeset/143108
>
WebKit Review Bot
Comment 6
2013-02-16 13:02:21 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug