Fix build warnings after r139853 https://bugs.webkit.org/show_bug.cgi?id=109929

Patch by Seokju Kwon <seokju.kwon@gmail.com> on 2013-02-16
Reviewed by Alexey Proskuryakov.

Use UNUSED_PARAM macro to fix build warning -Wunused-parameter
when INSPECTOR is disabled.

No new tests, no behavior change.

* inspector/InspectorInstrumentation.h:
(WebCore::InspectorInstrumentation::frameStartedLoading):
(WebCore::InspectorInstrumentation::frameStoppedLoading):
(WebCore::InspectorInstrumentation::frameScheduledNavigation):
(WebCore::InspectorInstrumentation::frameClearedScheduledNavigation):

Canonical link: https://commits.webkit.org/128309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143108 268f45cc-cd09-0410-ab3c-d52691b4dbfc